tests/e2e/test_errors_data/package_listing/expected.golden.out
# This file is @generated, regenerate by re-running test with `-- --env BUCK2_UPDATE_GOLDEN=1` appended to the test command

Command failed: 
Error evaluating expression:
    //package_listing/missing/foo/x/y/lmnop:target
    ^--------------------------------------------^


Caused by:
    package `root//package_listing/missing/foo/x/y/lmnop:` does not exist
             ^---------------------------^
        dir `root//package_listing/missing` does not exist



Command failed: 
Error evaluating expression:
    //package_listing/ignored/foo/x/y/lmnop:target
    ^--------------------------------------------^


Caused by:
    package `root//package_listing/ignored/foo/x/y/lmnop:` does not exist
             ^-------------------------------^
        dir `root//package_listing/ignored/foo` does not exist (project.ignore contains `package_listing/*red/**`)



Command failed: 
Error evaluating expression:
    //package_listing/cell/foo/x/y/lmnop:target
    ^-----------------------------------------^


Caused by:
    package `root//package_listing/cell/foo/x/y/lmnop:` does not exist
             ^------------------------^
        this package is using the wrong cell, use `cell//foo/x/y/lmnop` instead



Command failed: 
Error evaluating expression:
    //package_listing/missing_targets_file:target
    ^-------------------------------------------^


Caused by:
    package `root//package_listing/missing_targets_file:` does not exist
        missing `TARGETS.fixture` file (also missing alternatives `TARGETS.fixture.v2`, `TARGETS.fixture`)



Command failed: 
Error evaluating expression:
    //package_listing/data.file:target
    ^--------------------------------^


Caused by:
    package `root//package_listing/data.file:` does not exist
             ^-----------------------------^
       path `root//package_listing/data.file` is a file, not a directory



Command failed: 
Error evaluating expression:
    //package_listing/data.file/subdir:target
    ^---------------------------------------^


Caused by:
    package `root//package_listing/data.file/subdir:` does not exist
             ^-----------------------------^
       path `root//package_listing/data.file` is a file, not a directory
